[project]
name = "Water Column Sonar Resampling"
version = "25.9.0"
authors = [
  { name="Caitlyn Nguyen", email="cpnguyen0000@gmail.com" },
  { name="Logan Lessen", email="loganlessen@gmail.com" },
]
maintainers = [
  { name="Caitlyn Nguyen", email="cpnguyen0000@gmail.com" },
  { name="Logan Lessen", email="loganlessen@gmail.com" },
]
description = "Water Column Sonar Data Reprocessing Project for Warren Tech Capstone 2026"
keywords = ["reprocessing", "sonar", "water column", "zarr"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
